--- a/assets/css/components/title.css
+++ b/assets/css/components/title.css
@@ -3,7 +3,7 @@
   font-size: 250%;
   font-weight: 300;
   line-height: 1.15;
-  margin: 0 auto var(--vb-1\/3);
+  margin: 0;
   text-align: center;
   text-wrap: balance;
 }
@@ -11,7 +11,6 @@
 @media (min-width: 768px) {
   .Title {
     font-size: 350%;
-    margin-bottom: 0;
   }
 }
 
