--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -1,9 +1,11 @@
 .Header {
   margin-top: var(--vb);
+  margin-bottom: var(--vb-1\/3);
 }
 
 @media (min-width: 768px) {
   .Header {
     margin-top: var(--vb-2);
+    margin-bottom: 0;
   }
 }
